# plasma-opensuse

config-files/etc/xdg/: digikamrc  dolphinrc  kcm-about-distrorc  kded5rc  kdeglobals  kickoffrc  konversationrc  kscreenlockerrc  kwinrc  plasmarc  showfotorc  systemsettingsrc
config-files/usr/lib/sddm/sddm.conf.d/: 20-breeze-openSUSE.conf
config-files/usr/share/color-schemes/: OpenSUSEdark.colors  OpenSUSEdarkalternate.colors  openSUSE.colors  openSUSEdark.colors
config-files/usr/share/icons/breeze-dark/places/16/: start-here-branding.svgz
config-files/usr/share/plasma/desktoptheme/openSUSE/: colors  metadata.desktop  metadata.json  plasmarc
config-files/usr/share/plasma/desktoptheme/openSUSE/icons/: start.svgz
config-files/usr/share/plasma/desktoptheme/openSUSEdark/: colors  metadata.desktop  metadata.json  plasmarc
config-files/usr/share/plasma/desktoptheme/openSUSEdark/icons/: plasma-nm.svgz
config-files/usr/share/plasma/desktoptheme/openSUSEdefault/: metadata.desktop
config-files/usr/share/plasma/desktoptheme/openSUSElight/: colors  metadata.desktop  metadata.json  plasmarc
config-files/usr/share/plasma/layout-templates/org.opensuse.desktop.defaultPanel/: metadata.json
config-files/usr/share/plasma/look-and-feel/org.openSUSE.desktop/: metadata.json
config-files/usr/share/sddm/themes/breeze-openSUSE/: metadata.desktop
greeter/: CMakeLists.txt  Messages.sh  SUSEgreeter.desktop  greet.xml  greet_footer.html  greet_header.html  greet_section.html  greetings.cpp  greetings.h  main.cpp
greeter/pics/: CMakeLists.txt
(+24 files in other folders)
